Few live fixes while presenting results

--- a/Frontend/accordion/accordion.html
+++ b/Frontend/accordion/accordion.html
@@ -36,7 +36,131 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                    </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="bar-content">
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="accordion-bar">
+                <div class="bar-header clearfix">
+                    <i class="material-icons open-indicator">keyboard_arrow_down</i>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
+                    </h4>
+                    <div class="tools">
+                        <a class="primary-button tool print" href="#">
+                            <i class="material-icons">print</i>
+                            <p>Drucken</p>
+                        </a>
+                        <a class="primary-button tool edit" href="#">
+                            <i class="material-icons">create</i>
+                            <p>Umbenennen</p>
+                        </a>
+                        <a class="primary-button tool split" href="#">
+                            <i class="material-icons">call_split</i>
+                            <p>Splitten</p>
+                        </a>
+                        <a class="primary-button tool merge" href="#">
+                            <i class="material-icons">merge_type</i>
+                            <p>Mergen</p>
+                        </a>
+                    </div>
+                </div>
+                <div class="bar-content">
+                    <table>
+                        <tr>
+                            <td>1</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                        <tr>
+                            <td>6</td>
+                            <td>Marcus Popov</td>
+                            <td>SV Tora</td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+            <div class="accordion-bar">
+                <div class="bar-header clearfix">
+                    <i class="material-icons open-indicator">keyboard_arrow_down</i>
+                    <h4 class="category">
+                        Kategorie:
+                        <span class="category-name">1a</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -92,7 +216,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -148,7 +272,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -204,119 +328,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
-                    </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="bar-content">
-                    <table>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="accordion-bar">
-                <div class="bar-header clearfix">
-                    <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
-                        Kategorie:
-                        <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
-                    </h4>
-                    <div class="tools">
-                        <a class="primary-button tool print" href="#">
-                            <i class="material-icons">print</i>
-                            <p>Drucken</p>
-                        </a>
-                        <a class="primary-button tool edit" href="#">
-                            <i class="material-icons">create</i>
-                            <p>Umbenennen</p>
-                        </a>
-                        <a class="primary-button tool split" href="#">
-                            <i class="material-icons">call_split</i>
-                            <p>Splitten</p>
-                        </a>
-                        <a class="primary-button tool merge" href="#">
-                            <i class="material-icons">merge_type</i>
-                            <p>Mergen</p>
-                        </a>
-                    </div>
-                </div>
-                <div class="bar-content">
-                    <table>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                        <tr>
-                            <td>Marcus Popov</td>
-                            <td>SV Tora</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-            <div class="accordion-bar">
-                <div class="bar-header clearfix">
-                    <i class="material-icons open-indicator">keyboard_arrow_down</i>
-                    <h4 class="category">
-                        Kategorie:
-                        <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -376,7 +388,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -432,7 +444,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -488,7 +500,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
@@ -544,7 +556,7 @@
                     <h4 class="category">
                         Kategorie:
                         <span class="category-name">1a</span>
-                        <span class="graduation">(7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m)</span>
+                        (<span class="graduation">7. Kyu</span> / <span class="category-age">9-10</span> / <span class="category-sex">m</span> / <span class="count-members">6</span>)
                     </h4>
                     <div class="tools">
                         <a class="primary-button tool print" href="#">
