Just again a whole bunch of things added and fixed. Need to rethink my git usage.

--- a/Frontend/documents/documents.html
+++ b/Frontend/documents/documents.html
@@ -48,10 +48,11 @@
                 <p>Irgendeine Liste 4.pdf</p>
             </div>
         </div>
-        <a class="primary-button upload" href="#">
-            <i class="material-icons">add</i>
-            <p>Dokument hochladen</p>
-        </a>
+        <label for="file-input" class="file-input-container">
+            <input type="file" name="file-input" value="value" id="file-input" multiple />
+            <i class="material-icons">publish</i>
+            <span class="file-name">Datei auswählen...</span>
+        </label>
     </main>
 
     <i class="document-bg material-icons">description</i>
