--- a/Frontend/material-inputs/material-inputs.html
+++ b/Frontend/material-inputs/material-inputs.html
@@ -34,7 +34,7 @@
     </div>
 
     <div class="container">
-        <span class="text-input-container">
+        <span class="text-input-container input-container">
             <label class="icon" for="input"><i class="material-icons">person</i></label>
             <input class="text-input" type="text" id="input" name="input"/>
             <label class="text" for="input">Placeholder</label>
@@ -43,7 +43,7 @@
     </div>
 
     <div class="container">
-        <label class="checkbox-input-container">
+        <label class="checkbox-input-container input-container">
             Inhalt
             <input type="checkbox" value="value" />
             <span class="checkmark"></span>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="container">
-        <div class="select-input-container">
+        <div class="select-input-container input-container">
             <label class="icon"><i class="material-icons">list</i></label>
             <span class="select-input chosen placeholder">Platzhalter</span>
             <i class="material-icons">expand_more</i>
@@ -67,7 +67,7 @@
     </div>
 
     <div class="container">
-        <label class="radio-input-container">
+        <label class="radio-input-container input-container">
             Inhalt
             <input type="radio" name="name" value="value" />
             <span class="checkmark"></span>
@@ -75,7 +75,7 @@
     </div>
 
     <div class="container">
-        <div class="date-input-container">
+        <div class="date-input-container input-container">
             <label class="icon" for="date"><i class="material-icons">today</i></label>
             <input class="date-input" type="text" id="date" name="date" />
             <label class="text" for="input">Placeholder</label>
@@ -84,7 +84,7 @@
     </div>
 
     <div class="container">
-        <div class="time-input-container">
+        <div class="time-input-container input-container">
             <label class="icon" for="time"><i class="material-icons">schedule</i></label>
             <input class="time-input" type="text" id="time" name="time" />
             <label class="text" for="input">Placeholder</label>
@@ -93,10 +93,10 @@
     </div>
 
     <div class="container">
-        <label for="file-input" class="file-input-container">
-            <input type="file" name="file-input" value="value" id="file-input" />
+        <label for="file-input" class="file-input-container input-container">
+            <input class="file-input" type="file" name="file-input" value="value" id="file-input" multiple />
             <i class="material-icons">publish</i>
-            <span class="file-name">Datei auswählen</span>
+            <span class="file-name">Datei auswählen...</span>
         </label>
     </div>
 
