Finished modal windows design and functionality

--- a/Frontend/modal/modal.html
+++ b/Frontend/modal/modal.html
@@ -6,16 +6,19 @@
     <meta name="keywords" content="" />
     <meta name="description" content="" />
 
-    <title>Secondary-Button</title>
+    <title>Login</title>
 
     <link rel="stylesheet" href="css/normalize.css" type="text/css" />
-    <link rel="stylesheet" href="css/secondary-button.css" type="text/css" />
+    <link rel="stylesheet" href="css/material-inputs.css" type="text/css" />
+    <link rel="stylesheet" href="css/modal.css" type="text/css" />
 
     <!--[if lt IE 9]>
     <script src="/SV-Tora/js/html5shiv.js"></script>
     <![endif]-->
 
-    <script src="js/secondary-button.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/tilt.jquery.js"></script>
+    <script src="js/modal.js"></script>
 
     <!--
 
@@ -26,23 +29,14 @@
 </head>
 <body class="darkmode">
 
-  <a class="secondary-button">
-      <span class="text">
-        Button
-      </span>
-  </a>
+    <main class="">
+        <h1>Sample Heading</h1>
 
-  <a class="secondary-button delete">
-      <span class="text">
-        Button
-      </span>
-  </a>
+        <a class="modal-button">
+            Modal
+        </a>
 
-  <a class="secondary-button abort">
-      <span class="text">
-        Button
-      </span>
-  </a>
+    </main>
 
 </body>
 </html>
