--- a/Frontend/secondary-button/secondary-button.html
+++ b/Frontend/secondary-button/secondary-button.html
@@ -44,5 +44,11 @@
       </span>
   </a>
 
+  <a class="secondary-button disabled">
+      <span class="text">
+        Button
+      </span>
+  </a>
+
 </body>
 </html>
