Finished admin overview and a couple of other minor things

--- a/Frontend/login/login.html
+++ b/Frontend/login/login.html
@@ -42,13 +42,13 @@
                 <span class="text-input-container input-container">
                     <label class="icon" for="login-name"><i class="material-icons">person</i></label>
                     <input class="text-input" type="text" id="login-name" name="username" required />
-                    <label class="text" for="login-name">Username</label>
+                    <label class="text" for="login-name">Benutzername/E-Mail</label>
                     <span class="underline"></span>
                 </span>
                 <span class="text-input-container input-container">
                     <label class="icon password-label" for="login-password"><i class="material-icons">lock</i></label>
                     <input class="text-input" type="password" id="login-password" name="password" required />
-                    <label class="text" for="login-password">Password</label>
+                    <label class="text" for="login-password">Passwort</label>
                     <span class="underline"></span>
                 </span>
                 <a href="#" class="password-forgotten">Passwort vergessen</a>
@@ -64,19 +64,25 @@
                 <span class="text-input-container input-container">
                     <label class="icon" for="register-username"><i class="material-icons">person</i></label>
                     <input class="text-input" type="text" id="register-username" name="username" />
-                    <label class="text" for="register-username">Username</label>
+                    <label class="text" for="register-username">Benutzername</label>
+                    <span class="underline"></span>
+                </span>
+                <span class="text-input-container input-container">
+                    <label class="icon" for="register-mail"><i class="material-icons">email</i></label>
+                    <input class="text-input" type="text" id="register-mail" name="mail" />
+                    <label class="text" for="register-mail">E-Mail</label>
                     <span class="underline"></span>
                 </span>
                 <span class="text-input-container input-container">
                     <label class="icon password-label" for="register-password-1"><i class="material-icons">lock</i></label>
                     <input class="text-input" type="password" id="register-password-1" name="password" />
-                    <label class="text" for="register-password-1">Password</label>
+                    <label class="text" for="register-password-1">Passwort</label>
                     <span class="underline"></span>
                 </span>
                 <span class="text-input-container input-container">
                     <label class="icon password-label" for="register-password-2"><i class="material-icons">lock</i></label>
                     <input class="text-input" type="password" id="register-password-2" name="password" />
-                    <label class="text" for="register-password-2">Repeat Password</label>
+                    <label class="text" for="register-password-2">Passwort wiederholen</label>
                     <span class="underline"></span>
                 </span>
                 <button type="submit" class="secondary-button register-button">
