--- a/Frontend/messages/messages.html
+++ b/Frontend/messages/messages.html
@@ -49,8 +49,8 @@
             <div class="message">
                 <p class="time">15.11.2020 12:36</p>
                 <p class="sender">System</p>
-                <div class="notification clearfix">
-                    <i class="material-icons warning symbol">warning</i>
+                <div class="notification warning clearfix">
+                    <i class="material-icons symbol">warning</i>
                     <p class="message">Irgendetwas super duper mega krass wichtiges!</p>
                 </div>
             </div>
@@ -73,8 +73,8 @@
             <div class="message">
                 <p class="time">15.11.2020 12:36</p>
                 <p class="sender">System</p>
-                <div class="notification clearfix">
-                    <i class="material-icons symbol">info</i>
+                <div class="notification error clearfix">
+                    <i class="material-icons symbol">error_outline</i>
                     <p class="message">Irgendetwas super duper mega krass wichtiges!</p>
                 </div>
             </div>
@@ -89,8 +89,8 @@
             <div class="message">
                 <p class="time">15.11.2020 12:36</p>
                 <p class="sender">System</p>
-                <div class="notification clearfix">
-                    <i class="material-icons symbol">info</i>
+                <div class="notification success clearfix">
+                    <i class="material-icons symbol">done</i>
                     <p class="message">Irgendetwas super duper mega krass wichtiges!</p>
                 </div>
             </div>
