--- a/Frontend/settings/settings.html
+++ b/Frontend/settings/settings.html
@@ -35,6 +35,9 @@
 
             <h3>Wettkämpfe</h3>
             <a href="#">Bearbeiten</a>
+
+            <h3>Rechteverwaltung (Auch: Administrator hinzufügen)</h3>
+            <a href="#">Bearbeiten</a>
         </div>
     </main>
 
